WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111654
[wk2] Page overlays should use the accelerated drawing setting instead of hardcoding it on
https://bugs.webkit.org/show_bug.cgi?id=111654
Summary
[wk2] Page overlays should use the accelerated drawing setting instead of har...
Tim Horton
Reported
2013-03-06 17:55:54 PST
m_pageOverlayLayer->setAcceleratesDrawing(true); is *wrong*. <
rdar://problem/13364085
>
Attachments
patch
(2.25 KB, patch)
2013-03-06 17:57 PST
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2013-03-06 17:57:27 PST
Created
attachment 191876
[details]
patch
Tim Horton
Comment 2
2013-03-06 21:56:39 PST
http://trac.webkit.org/changeset/145037
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug