[wk2] Page overlays should use the accelerated drawing setting instead of hardcoding it on https://bugs.webkit.org/show_bug.cgi?id=111654 <rdar://problem/13364085>

Reviewed by Simon Fraser.

* WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:
(WebKit::TiledCoreAnimationDrawingArea::updatePreferences):
(WebKit::TiledCoreAnimationDrawingArea::createPageOverlayLayer):


Canonical link: https://commits.webkit.org/130041@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145037 268f45cc-cd09-0410-ab3c-d52691b4dbfc